# experiment_android_rust

./: .gitignore  README.md
exp_0/: env_android.sh
exp_1/: build.gradle
exp_1/app/: build.gradle
exp_1/app/src/main/java/com/example/myapplication/: MainActivity.kt  RustGreetings.java
exp_1/app/src/main/res/layout/: activity_main.xml
exp_1/app/src/test/java/com/example/myapplication/: RustGreetingsTest.kt
exp_1/rust/: Cargo.toml
exp_1/rust/src/: lib.rs
exp_2/: build.gradle
exp_2/app/: build.gradle
exp_2/app/src/main/: AndroidManifest.xml
exp_2/app/src/main/java/com/example/myapplication/: LibRust.java  MainActivity.java
exp_2/gradle/wrapper/: gradle-wrapper.properties
exp_2/rust/: Cargo.toml
exp_2/rust/src/: android.rs  lib.rs
