[package]
name = "rust"
version = "0.1.0"
authors = ["David Bernard"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
jni = { version = "0.14", default-features = false }

[target.'cfg(not(target_os="android"))'.dependencies]
pretty_env_logger = "0.3"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.8"

[lib]
crate-type = ["dylib"]
